get job post(s)
