# src/controllers/jobPosts.controller.ts
@@ -6,7 +6,8 @@ import {
   Post,
   Route,
   Security,
-  Tags
+  Tags,
+  Path
 } from 'tsoa'
 import { IUserModel } from '../types/common'
 import { IJobPost, createJobDto } from '../types/dto/jobpost'
@@ -18,5 +19,13 @@ export class JobPostsController extends Controller {
   @Post('/')
   public static async createJobPost(@Body() jobPost: createJobDto, @Inject() user: IUserModel): Promise<IJobPost> {
     return JobPostService.createJobPost(jobPost, user);
+  }
+  @Get('/')
+  public static async getAllJobPost(): Promise<IJobPost[]> {
+    return JobPostService.getJobPosts()
+  }
+  @Get('/{id}')
+  public static async getJobPost(@Path() id: string): Promise<IJobPost> {
+    return JobPostService.getJobPost(id)
   }
 }
